# ecr-kube-helper

./: Cargo.toml  Dockerfile
.github/workflows/: build-chart.yaml  build.yaml  tests.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  cronjob.yaml  secret.yaml  serviceaccount.yaml
src/: main.rs
src/commands/: get_credentials.rs  mod.rs
