[package]
name = "ecr-kube-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
aws-config = "1.1"
aws-sdk-ecr = "1.13"
aws-sdk-ecrpublic = "1.13"
base64 = "0.21"
clap = { version = "4.5.0", features = ["derive"] }
env_logger = "0.11"
kube = { version = "0.88", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21", features = ["v1_24"] }
log = "0.4"
serde_json = "1.0"
tokio = { version = "1.36", features = ["rt", "macros", "rt-multi-thread"] }
serde = { version = "1.0.196", features = ["derive"] }
